--- a/Website/style.css
+++ b/Website/style.css
@@ -59,6 +59,9 @@ section#main p{
 }
 
 #tri {
+    justify-content: center;
+    align-items: center;
+    display: flex;
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
